--- a/Style.css
+++ b/Style.css
@@ -548,13 +548,14 @@ main{
 {
   body
   {
-    padding: 0;
+    padding: 0 5px;
   }
   /* For all Mobile  Navbar ----------------------------------------------------------------------------------------------------------------------------*/
 .Logo
 {
   height: 80px;
-  width: 100%;
+  width: 90%;
+  margin: auto 5%;
   background-color:transparent;
   padding: 0;
 }.Logo img
