--- a/Styles/Note.css
+++ b/Styles/Note.css
@@ -60,12 +60,11 @@ button[type="submit"]:hover {
   background:linear-gradient(180deg, var(--primary-color), var(--secondary-color));
   padding:20px;
   border-radius: var(--radius);
-  margin-bottom: 30px;
   box-shadow: var(--shadow);
   transition: transform 0.2s;
   border: 0;
   width: 70%;
-  margin: auto 15%;
+  margin: 15px  15%;
 
 }
 
@@ -183,6 +182,8 @@ button[type="submit"]:hover {
 .paid-notes-section {width: 80%; margin: 40px 10%; ; padding: 24px; border-radius: 8px; }
 .paid-notes-list { display: flex; gap: 24px; flex-wrap: wrap; }
 .paid-note-box { background: #fff; border: 1px solid #eee; border-radius: 6px; padding: 18px; width:30%; margin:0.5%; box-shadow: var(--shadow); }
+.paid-note-box p {font-size: 15px; }
+
 .paid-note-footer { margin-bottom: 12px; display: flex; justify-content: space-between; align-items: center; }
 .note-price { font-weight: bold; color: #2e7d32; }
 .buy-btn { background:var(--primary-color); color: #fff; padding: 6px 16px; border-radius: 4px; text-decoration: none; }
