--- a/Styles/Note.css
+++ b/Styles/Note.css
@@ -5,7 +5,7 @@
   --Lighttext-color: #000000;
   --darktext-color:white;
   --card-bg: #f3eded;
-  --shadow: 0 8px 30px rgba(2,6,23,0.08);
+  --shadow:0 1px 5px  #141414 inset;
   --radius: 10px;
   --font-main: 'Poppins', sans-serif;
   --hoverbg :#da6b7e;
