--- a/Styles/Webdev.css
+++ b/Styles/Webdev.css
@@ -1,8 +1,8 @@
 
 :root
 {
-  --primary-color: #004080;
-  --secondary-color: #f43f5e;
+  --primary-color: #263F5A;
+  --secondary-color:#F8627B;
   --bg-light: #f9fafb;
   --Lighttext-color: #000000;
   --darktext-color:white;
