--- a/Styles/Assignment.css
+++ b/Styles/Assignment.css
@@ -1,251 +1,55 @@
 
-:root {
+@import url("root.css");
 
-  --primary-color: #263F5A;
-  --secondary-color:#F8627B;
-  --bg-light: #f9fafb;
-  --Lighttext-color: #000000;
-  --darktext-color:white;
-  --card-bg: #f3eded;
-  --shadow:0 1px 5px  #141414 inset;
-  --radius: 10px;
-  --font-main: 'Poppins', sans-serif;
-  --hoverbg :#da6b7e;
-  --pSize:0.9rem;
-  --border:none;
-}
-#Assignment a
-{
-    display:inline;
-}#Assignment h1{
-    text-align: left;
-}
-.marqueebox{
-      background:white;
-    overflow: hidden;
-    white-space: nowrap;
-    box-sizing: border-box;
-  }
+#Assignment a{ display:inline;}
+#Assignment h1{ text-align: left;}
+.marqueebox{background:white; overflow: hidden; white-space: nowrap; box-sizing: border-box;}
+.marquee { width: 100%; background-color:white; animation: scroll 10s alternate infinite; transition:20s; }
+.marquee img { height: 50px; padding-left:50px;}
 
-  .marquee {
-    width: 100%;
-    background-color:white;
-    animation: scroll 10s alternate infinite;
-    transition:20s;
-  }.marquee img
+@keyframes scroll
   {
-    height: 50px;
-padding-left:50px;
+    0% { transform: translateX(20%);}
+    100% { transform: translateX(-20%); }
   }
 
-@keyframes scroll {
-    0% {
-      transform: translateX(20%);
-    }
+.project-card { background: #ffffff; border: 1px solid #e1e7ec; border-radius:var(--shadow); border-radius: var(--radius); padding:3rem 2rem; margin-bottom: 30px;}
+.project-card p { font-size:var(--pSize); line-height: 1.6;}
+.project-card ul {margin-top: 15px; padding-left: 20px;}
+.project-card ul li {margin-bottom: 10px; list-style-type: '✅';}
 
-    100% {
-      transform: translateX(-20%);
-    }
-  }
-
-.project-card {
-  background: #ffffff;
-  border: 1px solid #e1e7ec;
-  border-radius:var(--shadow);
-  border-radius: var(--radius);
-  padding:3rem 2rem;
-  margin-bottom: 30px;
-}
-
-.project-card p {
-  font-size:var(--pSize);
-  line-height: 1.6;
-}
-
-.project-card ul {
-  margin-top: 15px;
-  padding-left: 20px;
-}
-
-.project-card ul li {
-  margin-bottom: 10px;
-  list-style-type: '✅';
-}
 /*basic-project section -------------------------------------- */
-#basic-project
-{
-  background:transparent;
-  color: white;
-  padding: 3rem 0.5rem;
-  border-radius: var(--radius);
-  text-align: center;
-  box-shadow: var(--shadow);
-  align-items: center;
-  align-content: center;
-  transition-delay: 10s;
-  height: auto;
-  border: var(--border);
-  width: 80%;
-  margin: auto 10%;
-}#basic-project h2{
-    text-align: left;
-    padding-left: 2rem;
-   color: var(--primary-color);
-   height: 40px;
-}.demoview
-{
-
-    height:400px;
-
-}
-.basic-project-box{
-    background: white;
-    width:25%;
-    height:300px;
-    float: left;
-    margin:2% 3.7%;
-    box-shadow: var(--shadow-md);
-    transition: var(--transition-base);
-    border-radius: var(--radius);
-    border:2px dotted var(--primary-color);
-    border-bottom: 5px solid var(--primary-color);
-    color: #000000;
-    box-shadow:2px 2px 5px black;
-    overflow: hidden;
-}.project-photo
-{
-    background-color:transparent;
-    height:60%;
-    width: 100%;
-    overflow: hidden;
-}.project-photo img
-{
-    height: 100%;
-    width: 100%;
-    border-radius:14px 14px 0 0;
-    border: 4px solid rgb(255, 255, 255);
-    filter: grayscale();
-}.basic-project-box h3{
-    text-align: left;
-    padding: 10px;
-    color: #262424;
-
-}.basic-project-box span{
-    background-color: #ebe3e3;
-    float: left;
-    margin:5px;
-    padding:2px 3.5px 1px 3.5px;
-    border-radius:4px;
-    font-size: 10px;
-}#View
-{
-color:white;
-padding: 2px;
-width:40px;
-background-color: var(--primary-color);
-
-}
-#Download
-{
- color:white;
- padding:2px;
- width:50px;
- background-color: var(--secondary-color);
-}#Download:hover{
-    background-color: var(--hoverbg);
-}#View:hover{
-    background-color: var(--hoverbg);
-}
-.viewall
-{
-
-    height:400px;
-    display:none;
-    width:100%;
-
-}h2 #Viewbtn , #Cbtn
-{
-    height: 30px;
-    width: 100px;
-    background-color: var(--primary-color);
-    font-size: 1.2rem;
-    color: white;
-    border: var(--border);
-    border-radius: var(--radius);
-}h2 #Cbtn
-{
-    display: none;
-      background-color:var(--primary-color);
-}
-.basic-project-box:hover {
-    transform: translateY(-5px);
-    box-shadow: var(--shadow-lg);
-}.basic-project-box:hover img
-{
-    transform: scale(1.2);
-    transition: 0.3s;
-      filter: grayscale(0);
-}.project-card h3 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-  color: var(--primary-color);
-}
-
-
+#basic-project{ background:transparent; color: white; padding: 3rem 0.5rem; border-radius: var(--radius);  text-align: center;  box-shadow: var(--shadow);  align-items: center; align-content: center; transition-delay: 10s;  height: auto; border: var(--border); width: 80%; margin: auto 10%;}
+#basic-project h2{text-align: left; padding-left: 2rem; color: var(--primary-color); height: 40px;}
+.demoview{height:400px;}
+.basic-project-box{ background: white;  width:25%;  height:300px;  float: left;  margin:2% 3.7%;  box-shadow: var(--shadow-md);  transition: var(--transition-base);   border-radius: var(--radius);  border:2px dotted var(--primary-color); border-bottom: 5px solid var(--primary-color);  color: #000000; box-shadow:2px 2px 5px black; overflow: hidden;}
+.project-photo { background-color:transparent; height:60%; width: 100%; overflow: hidden;}
+.project-photo img{ height: 100%; width: 100%; border-radius:14px 14px 0 0; border: 4px solid rgb(255, 255, 255); filter: grayscale();}
+.basic-project-box h3{ text-align: left; padding: 10px; color: #262424;}
+.basic-project-box span{ background-color: #ebe3e3; float: left; margin:5px; padding:2px 3.5px 1px 3.5px; border-radius:4px; font-size: 10px;}
+#View{color:white; padding: 2px; width:40px; background-color: var(--primary-color);}
+#Download{ color:white; padding:2px; width:50px; background-color: var(--secondary-color);}
+#Download:hover{background-color: var(--hoverbg);}
+#View:hover{background-color: var(--hoverbg);}
+.viewall{height:400px;display:none; width:100%;}
+h2 #Viewbtn , #Cbtn { height: 30px; width: 100px;  background-color: var(--primary-color); font-size: 1.2rem; color: white; border: var(--border); border-radius: var(--radius);}
+h2 #Cbtn{display: none; background-color:var(--primary-color);}
+.basic-project-box:hover {transform: translateY(-5px); box-shadow: var(--shadow-lg);}
+.basic-project-box:hover img {transform: scale(1.2); transition: 0.3s; filter: grayscale(0);}
+.project-card h3 { font-size: 1.5rem; margin-bottom: 10px;  color: var(--primary-color);}
 
 @media screen and (max-width:700px)
 {
-#Assignment a
-{
-    display: block;
-}#Assignment a:hover
-{
-  background-color: var(--secondary-color);
+#Assignment a { display: block;}
+#Assignment a:hover{ background-color: var(--secondary-color);}
+.marquee img{ height: 30px;padding-left:50px;}
+.demoview ,.viewall{height:auto;}
+.basic-project-box{ width:100%;   height:350px; float:none;  display: block;    margin:5% 0;}
+.project-photo{height:50%;  width: 100%;   /*162px */}
+.project-photo img {height: 100%;  width: 100%;}
 }
-.marquee img
-  {
-    height: 30px;
-padding-left:50px;
-  }
-  .demoview ,.viewall
-{
-
-    height:auto;
-
-}
-  .basic-project-box{
-    width:100%;
-    height:350px;
-    float:none;
-    display: block;
-    margin:5% 0;
-
-}.project-photo
-{
-    height:50%;   /*280px */
-    width: 100%;   /*162px */
-}.project-photo img
-{
-
-    height: 100%;
-    width: 100%;
-}
-
-
-}
-@media screen and (min-width: 700px) and (max-width: 1100px) {
-  .project-photo
-{
-
-    height:40%;
-
-    width: 100%;
-}
-.project-photo img
-{
-    height:100%;
-    width: 100%;
-    border-radius:14px 14px 0 0;
-    border: 4px solid rgb(255, 255, 255);
-}
+@media screen and (min-width: 700px) and (max-width: 1100px)
+ {
+.project-photo{height:40%; width: 100%;}
+.project-photo img{height:100%; width: 100%; border-radius:14px 14px 0 0; border: 4px solid rgb(255, 255, 255);}
 }
